--- a/packages/ranui/base.less
+++ b/packages/ranui/base.less
@@ -1,6 +1,4 @@
-@font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
-'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+@font-family:-apple-system,"system-ui",BlinkMacSystemFont,Segoe UI,Roboto,PingFang SC,Helvetica Neue,sans-serif
 
 @box-shadow:
   0 6px 16px 0 rgba(0, 0, 0, 0.08),
